# design-agents

./: .env.example  .gitignore  ARCHITECTURE_CONSTITUTION.md  HOW_TO_APPLY.txt  NAMING_CONSTITUTION.md  PACKAGE_MANIFEST.json  README.md  README_PATCH.txt  pyproject.toml  requirements.txt
agents/: __init__.py  engine.py
agents/capabilities/: autonomy.py  background.py  base.py  compact.py  isolation.py  protocol.py  registry.py  subagent.py  task.py  team.py  todo.py  workspace.py
agents/core/: dispatcher.py  models.py  prompt_builder.py  skill_loader.py
agents/llm/: anthropic_client.py  base.py  config.py  factory.py  mock_client.py  openai_client.py
agents/toolboxes/: base.py  files.py  mcp_stdio.py  shell.py
design_agents/: engine.py
design_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
design_agents/capabilities/: autonomy.py  background.py  base.py  compact.py  isolation.py  protocol.py  registry.py  subagent.py  task.py  team.py  todo.py  workspace.py
design_agents/core/: action_compiler.py  history.py  prompt_builder.py  response_parser.py  storage.py
design_agents/llm/: anthropic_client.py  coding_plan.py  config.py  factory.py  mock_client.py  openai_client.py
design_agents/toolboxes/: base.py  files.py  mcp_stdio.py  shell.py
src/agent/: __init__.py
src/agents/: __init__.py  general_chat.py  parts_design_chat.py  review_agent.py  wiki_front_chat.py  worker_agent.py
test/: export_project.py  project_export.txt
tests/: chat_general_engine.py  chat_parts_design_engine.py  chat_wiki_front_engine.py  self_check.py  test_action_surface.py  test_constitution_attachment_participant.py  test_constitution_harness_boundary.py  test_constitution_no_hidden_defaults.py  test_context_assembler.py  test_engine_builder.py  test_entity_path_pattern.py  test_no_legacy_strings.py  test_page_path_pattern.py  test_protocol_index_registry.py  test_protocol_index_scan.py  test_protocol_links.py  test_refs_activation.py  test_registry.py  test_repo_lint.py  test_runtime_builder.py  test_single_md_per_folder.py  test_wiki_hub.py  test_wiki_permissions.py  test_wiki_render.py  test_wiki_shared_store.py
(+564 files in other folders)
